style.css
* {
	box-sizing: border-box;
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

/*@keyframes slide-in {
   0% {
    top: -300px;
  }
  100% {
    top: 0;
  }
}*/

body {
	font-family: 'Work Sans', sans-serif;
	font-style: normal;
	font-weight: 500;
	font-size: 20px;
	line-height: 40px;
	margin-bottom: 100px;
   animation: fade-in 1.5s ease;
   -webkit-animation: fade-in 1.5s ease;
}

/*Top Navigation Bar*/
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

li {
  float: left;
  font-weight: 400;
}

li a {
  display: block;
  text-align: right;
  text-decoration: none;
}

.active {
	color: black;
}

#name_header {
	color: black;
	font-size: 40px;
}

/*Secondary Navigation*/

.navigation_wrapper {
	padding-top: 24px;
	padding-bottom: 80px;
}

.navigation {
	font-family: 'Work Sans', sans-serif;
	font-weight: 400;
	font-size: 20px;
	line-height: 25px;
	color: #B0B0B0;
	padding-top: 10px;
}

#large_bio {
	font-size: 50px;
	line-height: 70px;
	color: #8C8C8C;
	font-weight: 300;
	padding: 100px 225px 40px 0px;
	width: 1000px;
	margin: auto;
}

.highlight_text {
	color: black;
}

#bio {
	font-size: 48px;
	line-height: 66px;
	font-weight: 500;
}

#bio_sub {
	font-size: 24px;
	line-height: 36px;
	font-weight: 400;
}

#current {
	color: #000000;
}

a {
	color: #B0B0B0;
	text-decoration: none;
}

a:active {
	color: #000000;
}

a:hover {
	color: #000000;
}

#column_container {
	width: 1000px;
	margin: auto;
	padding-top: 40px;
	position: relative;
}

#column_container2 {
	width: 1000px;
	margin: auto;
	padding-top: 80px;
}


#column_container:after {
	content: "";
	display: table;
	clear: both;
}

#column_container2:after {
	content: "";
	display: table;
	clear: both;
}


.line {
	width: 560px;
	border-bottom: 2px solid #8C8C8C;
	position: absolute;
}

.short_separator {
	width: 50px;
	border-bottom: 2px solid black;
	position: absolute;
}

.column {
	float: left;
	padding-bottom: 160px;
}

.column3 {
	float: left;
	padding-bottom: 80px;
}

/*About Page*/
.aboutColumn {
	float: left;
}

.aboutColumn2 {
	float: left;
}

#aboutColumn_container {
	width: 800px;
	margin: auto;
	padding-top: 60px;
}

#aboutColumn_container2 {
	width: 800px;
	margin: auto;
	padding-top: 40px;
}

#aboutColumn_container:after {
	content: "";
	display: table;
	clear: both;
}

#aboutColumn_container2:after {
	content: "";
	display: table;
	clear: both;
}

.line2 {
	width: 800px;
	border-bottom: 1px solid #CCCCCC;
	/*margin: auto;*/
	margin-bottom: 20px;
	position: relative;
}

.line3 {
	width: 1000px;
	border-bottom: 1px solid #CCCCCC;
	position: relative;
	margin-top: 60px;
}

.small_img {
	width: 370px;
	margin-right: 30px;

}

.small_img2 {
	width: 375px;
}

.large_img {
	width: 790px;
	margin-top: 20px;
}

.small_text {
	width: 400px;
}

/*Work Pages Styling*/

.column2 {
	float: left;
	padding-bottom: 50px;
}

#portfolio { 
	width: 600px;
	margin: auto;
}

.sub_portfolio {
	font-size: 20px;
	font-weight: 400;
	line-height: 50px;
}
.year {
	font-size: 20px;
	font-weight: 400;
	line-height: 30px;
	color: gray;
}

.project_header {
	margin-bottom: 100px;
}

.left {
	width: 33.33%;
	height: 200px;
}

.right {
	width: 66.67%;
}

.left_proj {
	/*width: 33.33%;*/
	width: 40%;
}

.right_proj {
	height: 60px;
	width: 60%;
	transition: transform .3s;
}

.right_proj:hover {
	transform: scale(0.95);
	opacity: 0.95;
}


/*Project View Page*/


.modal-background {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgb(255 255 255 / 70%);
}

.modal-close {
	position: absolute;
	right: 0px;
	top: 0px;
	color: black;
	padding: 30px 45px;
	cursor: pointer;
}

.modal-content {
	position: fixed;
	top: 50%;
	left: 50%;
	max-width: 1000px;
	transform: translate(-50%, -50%);
}

.modal {
	display: none;
}

.header_box {
/*	background-color: #FF831B;
	width: 100%;*/
}

.project_wide_header {
	width: 100%;
	padding-top: 40px;
	padding-bottom: 40px;
}

#column_container3 {
	width: 800px;
	margin: auto;
}

.left_proj2 {
	width: 50%;
	height: 300px;
}

.right_proj2 {
	width: 50%;
	height: 300px;
}

.right_proj3 {
	width: 50%;
	height: 550px;
}

.right_proj4 {
	width: 50%;
	height: 480px;
}

.header3 {
	color: black;
	font-weight: 500;
	font-size: 26px;
	line-height: 30px;
	padding-bottom: 20px;
}

.header4 {
	color: #8C8C8C;
	font-weight: 400;
	font-size: 16px;
	line-height: 20px;
}

.bodytext {
	font-weight: 400;
	padding-bottom: 30px;
	line-height: 30px;
}

#containerimg {
	width: 780px;
	padding-bottom: 10px;
}

.img_row { 
	width: 800px;
	margin: auto;
}

.img_column {
  float: left;
  width: 400px;
  height: 400px;
}

.imgspace {
	padding-right: 20px;
}


#img_background {
	width: 380px;
	height: 380px;
}

.line4 {
	width: 1000px;
	border-bottom: 1px solid #CCCCCC;
	position: relative;
	margin: auto;
	padding-bottom: 120px;
}

.allprojects_navigation_row1{
	margin: auto;
	font-size: 22px;
	text-align: center;
}

.navproject {
	float: left;
	padding-top: 10px;
	width: 200px;
	height: 40px;
}
/*About Page*/

#about_header {
	font-family: 'Work Sans', sans-serif;
	font-size: 32px;
	line-height: 60px;
	font-weight: 500;
}
#about_description {
	font-weight: 400;
	line-height: 40px;
}

.italic {
	font-style: italic;
}

#footer {
	font-size: 20px;
	line-height: 30px;
	font-weight: 300;
	text-align: left;
	padding: 40px 0px 20px 0px;
}

/*Unsorted
*/

.book {
	padding-top: 10px;
	padding-bottom: 10px;
	font-weight: 400;
}

.category {
	font-size: 20px;
	line-height: 25px;
	top: 10px;
	padding-top: 10px;
	padding-bottom: 10px;
	font-weight: 500;
}

.header {
	font-family: 'Work Sans', sans-serif;
	font-size: 32px;
	line-height: 40px;
	font-weight: 500;
}

.sub_header {
	font-family: 'Work Sans', sans-serif;
	font-size: 26px;
	line-height: 32px;
	padding-top: 24px;
	width: 240px;
}

.description {
	padding-top: 24px;
	font-family: 'Work Sans', sans-serif;
	font-style: normal;
	font-weight: 400;
	font-size: 20px;
	line-height: 25px;
	width: 400px;

}

#profile_pic {
	width: 180px;
	height: 180px;
	border-radius: 50%;
}

.author {
	color: #979797;
	font-weight: 400;
}

/*Book Recs styling*/

.left_rec {
	width: 33.33%;
	height: 60px;
}

.right_rec {
	width: 66.67%;
	height: 60px;
}


.book_row { 
	width: 800px;
	margin: auto;
}

.book_column {
  float: left;
  width: 240px;
  height: 240px;
}


#book_background {
	width: 240px;
	height: 240px;
}

.bookspace {
	margin-right: 40px;
}


/*
#book_row:after {
	content: "";
	display: table;
	clear: both;
}*/

